--- a/.github/workflows/profile-summary-cards.yml
+++ b/.github/workflows/profile-summary-cards.yml
@@ -1,19 +1,20 @@
 name: GitHub-Profile-Summary-Cards
 
 on:
-  schedule: # execute every 24 hours
-    - cron: "* */24 * * *"
+  schedule:
+    # Runs at 4am JST
+    - cron: '0 19 * * *' # ①
   workflow_dispatch:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-    name: generate
+    runs-on: ubuntu-latest # ②
+    name: generate-github-profile-summary-cards
 
     steps:
       - uses: actions/checkout@v2
-      - uses: vn7n24fzkq/github-profile-summary-cards@v0.6.1
+      - uses: vn7n24fzkq/github-profile-summary-cards@release
         env:
-          GITHUB_TOKEN: ${{ secrets.SECRET_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.SECRET_TOKEN }} # ③
         with:
-          USERNAME: ${{ github.repository_owner }}
+          USERNAME: ${{ github.repository_owner }} # ④
