--- a/.github/workflows/profile-summary-cards.yml
+++ b/.github/workflows/profile-summary-cards.yml
@@ -1,20 +1,19 @@
 name: GitHub-Profile-Summary-Cards
 
 on:
-  schedule:
-    # Runs at 4am JST
-    - cron: '0 19 * * *' # ①
+  schedule: # execute every 24 hours
+    - cron: '* */24 * * *'
   workflow_dispatch:
 
 jobs:
   build:
-    runs-on: ubuntu-latest # ②
-    name: generate-github-profile-summary-cards
+    runs-on: ubuntu-latest
+    name: generate
 
     steps:
       - uses: actions/checkout@v2
       - uses: vn7n24fzkq/github-profile-summary-cards@release
         env:
-          GITHUB_TOKEN: ${{ secrets.SECRET_TOKEN }} # ③
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          USERNAME: ${{ github.repository_owner }} # ④
+          USERNAME: ${{ github.repository_owner }}
